--- a/Todo_list.csproj
+++ b/Todo_list.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{DA3B05A4-F9C9-4654-9509-0565AC3E542F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>projekt2._0</RootNamespace>
-    <AssemblyName>projekt2.0</AssemblyName>
+    <RootNamespace>Todo_list</RootNamespace>
+    <AssemblyName>Todo_list</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
